# saucedemo-tests

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: playwright.yml
pages/: base_page.py  cart_page.py  checkout_page.py  footer_component.py  inventory_page.py  login_page.py  product_detail_page.py
tests/: conftest.py  test_cart.py  test_cart_persistence.py  test_checkout.py  test_edge_users.py  test_footer.py  test_inventory.py  test_login.py  test_product_detail.py  test_sorting.py
