[project]
name = "saucedemo-e2e-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "pytest-xdist>=3.8.0",
    "allure-pytest>=2.16.0",
]

[tool.pytest.ini_options]
addopts = "--base-url=https://www.saucedemo.com --tracing=retain-on-failure --screenshot=only-on-failure --video=retain-on-failure"
testpaths = ["tests"]
markers = [
    "smoke: fast core happy-path tests",
    "e2e: end-to-end user flow tests",
    "negative: error and validation paths",
]

[tool.allure]
# allure results are written here; `allure serve allure-results` to view
results_dir = "allure-results"
