[project]
name = "saucedemo-e2e-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=14.0",
    "allure-pytest>=2.16.0",
    "faker>=40.23.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
addopts = "--base-url=https://www.saucedemo.com --reruns=2 --strict-markers --strict-config --tracing=retain-on-failure --screenshot=only-on-failure --video=retain-on-failure"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: fast core happy-path tests",
    "e2e: end-to-end user flow tests",
    "negative: error and validation paths",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Clean baseline: pycodestyle (E/W), pyflakes (F), import sorting (I),
# unused arguments (ARG), comprehensions (C4), and Bandit security checks (S).
select = ["E", "W", "F", "I", "ARG", "C4", "S"]
ignore = [
    # Allow unused function arguments for fixture signature compatibility
    # (pytest fixtures must match the parameter list even when unused).
    "ARG001",
    # Allow unused method arguments in page-object methods that mirror
    # a stable public API (e.g. subclasses overriding base signatures).
    "ARG002",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert` for in-memory Python value comparisons.
"tests/**" = ["S101"]

[tool.ruff.format]
# Match Black defaults for line length/quote style.
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.allure]
# allure results are written here; `allure serve allure-results` to view
results_dir = "allure-results"
